[gd_scene load_steps=3 format=3 uid="uid://b5a2dmcnrqk5h"]

[ext_resource type="Script" path="res://scripts/project_screen.gd" id="1_g2cm7"]
[ext_resource type="PackedScene" uid="uid://fmn3suf3xtpq" path="res://scenes/ExitButton.tscn" id="1_q7jdw"]

[node name="ProjectScreen" type="Control"]
custom_minimum_size = Vector2(320, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -960.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2cm7")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ProjectNameLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Project name"

[node name="ProjectName" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="ExitButton" parent="GridContainer" instance=ExtResource("1_q7jdw")]
visible = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8

[node name="DescriptionLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Description"

[node name="Description" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 89)
layout_mode = 2
placeholder_text = "Description"
editable = false

[node name="EmptySpace" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="CapacityLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Capacity
"

[node name="Capacity" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="EmptySpace2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Size"

[node name="Size" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
editable = false

[node name="EmptySpace3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="ParentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Parent"

[node name="Parent" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="EmptySpace4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="CompleteButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Complete"

[connection signal="pressed" from="GridContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="GridContainer/CompleteButton" to="." method="_on_complete_button_pressed"]
